--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "matplotlib",
   "connected-components-3d>=3.26.1",
   "einops>=0.8.2",
+  "scikit-learn>=1.8.0",
 ]
 
 [[tool.uv.index]]
