--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ dependencies = [
   "einops>=0.8.2",
   "scikit-learn>=1.8.0",
   "ipython>=9.9.0",
+  "transformers>=5.1.0",
+  "torchmetrics>=1.8.2",
+  "simpleitk>=2.5.3",
+  "hydra-core>=1.3.2",
+  "openpyxl>=3.1.5",
 ]
 
 [[tool.uv.index]]
