--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
   "simpleitk>=2.5.3",
   "hydra-core>=1.3.2",
   "openpyxl>=3.1.5",
+  "wandb>=0.25.0",
 ]
 
 [dependency-groups]
