--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
   "hydra-core>=1.3.2",
   "openpyxl>=3.1.5",
   "wandb>=0.25.0",
+  "pydicom>=3.0.1",
 ]
 
 [project.optional-dependencies]
