--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ torchvision = [
 
 [project.scripts]
 lesion-tracking = "lesion_tracking:main"
+lesion-tracking-train = "lesion_tracking.training.trainer:main"
 
 [build-system]
 requires = ["uv_build>=0.9.25,<0.10.0"]
