--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
   "openpyxl>=3.1.5",
   "wandb>=0.25.0",
   "pydicom>=3.0.1",
+  "pyinstrument>=5.1.2",
 ]
 
 [project.optional-dependencies]
